; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/msdosfs/extr_msdosfs_vnops.c_msdosfs_open.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/msdosfs/extr_msdosfs_vnops.c_msdosfs_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vop_open_args = type { i32, i32 }
%struct.denode = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vop_open_args*)* @msdosfs_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @msdosfs_open(%struct.vop_open_args* %0) #0 {
  %2 = alloca %struct.vop_open_args*, align 8
  %3 = alloca %struct.denode*, align 8
  store %struct.vop_open_args* %0, %struct.vop_open_args** %2, align 8
  %4 = load %struct.vop_open_args*, %struct.vop_open_args** %2, align 8
  %5 = getelementptr inbounds %struct.vop_open_args, %struct.vop_open_args* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.denode* @VTODE(i32 %6)
  store %struct.denode* %7, %struct.denode** %3, align 8
  %8 = load %struct.vop_open_args*, %struct.vop_open_args** %2, align 8
  %9 = getelementptr inbounds %struct.vop_open_args, %struct.vop_open_args* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.denode*, %struct.denode** %3, align 8
  %12 = getelementptr inbounds %struct.denode, %struct.denode* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.vop_open_args*, %struct.vop_open_args** %2, align 8
  %15 = getelementptr inbounds %struct.vop_open_args, %struct.vop_open_args* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @vnode_create_vobject(i32 %10, i32 %13, i32 %16)
  ret i32 0
}

declare dso_local %struct.denode* @VTODE(i32) #1

declare dso_local i32 @vnode_create_vobject(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
